k8s/apps/app-skeleton/service.yaml
apiVersion: v1
kind: Service
metadata:
  name: app-skeleton
  namespace: default
  labels:
    app: app-skeleton
    phase: "2"
spec:
  type: ClusterIP
  selector:
    app: app-skeleton
  ports:
  - name: http
    port: 8080
    targetPort: http
    protocol: TCP
  sessionAffinity: None
